# Copyright (C) 2026 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../gn/perfetto_cpp_blob_header.gni")

# Bundles every SKILL.md under ai/skills/ into a single gzip-compressed
# constexpr std::array<uint8_t, N> embedded in the trace_processor
# binary. Generated header: ai/skills/skills.h, exposing
# `ai_skills::kSkills`. Decompress at runtime with
# util::GzipDecompressor::DecompressFully and iterate the resulting
# bytes with util::SqlBundle.
#
# This is intentionally a generic compressed-blob target rather than a
# perfetto_amalgamated_sql_header (which is SQL-flavoured): SKILL.md
# files are not SQL, and the "amalgamated SQL" template is a hack we
# don't want to spread to non-SQL artifacts.
perfetto_cpp_blob_header("skills") {
  script = "gen_skill_bundle.py"
  sources = [
    "perfetto-infra-getting-trace-processor/SKILL.md",
    "perfetto-infra-querying-traces/SKILL.md",
    "perfetto-workflow-android-heap-dump/SKILL.md",
  ]
  generated_header = "${target_gen_dir}/skills.h"
  pass_gen_dir = true
  extra_args = [
    "--namespace",
    "perfetto::trace_processor::ai_skills",
  ]
}
