# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../gn/perfetto.gni")

executable("sdk_example") {
  sources = [
    "example.cc",
    "trace_categories.cc",
    "trace_categories.h",
  ]
  defines = [ "PERFETTO_SDK_EXAMPLE_USE_INTERNAL_HEADERS" ]
  testonly = true
  deps = [
    "../..:libperfetto_client_experimental",
    "../../gn:default_deps",
  ]
}

executable("example_system_wide") {
  sources = [
    "example_system_wide.cc",
    "trace_categories.cc",
    "trace_categories.h",
  ]
  defines = [ "PERFETTO_SDK_EXAMPLE_USE_INTERNAL_HEADERS" ]
  testonly = true
  deps = [
    "../..:libperfetto_client_experimental",
    "../../gn:default_deps",
    "../../src/base",
  ]
}

executable("example_custom_data_source") {
  sources = [ "example_custom_data_source.cc" ]
  defines = [ "PERFETTO_SDK_EXAMPLE_USE_INTERNAL_HEADERS" ]
  testonly = true
  deps = [
    "../..:libperfetto_client_experimental",
    "../../gn:default_deps",
    "../../src/base",
  ]
}

executable("example_startup_trace") {
  sources = [ "example_startup_trace.cc" ]
  defines = [ "PERFETTO_SDK_EXAMPLE_USE_INTERNAL_HEADERS" ]
  testonly = true
  deps = [
    "../..:libperfetto_client_experimental",
    "../../gn:default_deps",
    "../../src/base",
  ]
}
