# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# On windows C11 (required for atomics) is not really supported, so we can't
# really build a C executable.
assert(!is_win)

executable("example_shlib_data_source") {
  testonly = true
  deps = [
    "../../gn:default_deps",
    "../../src/shared_lib:libperfetto_c",
  ]
  sources = [ "example_shlib_data_source.c" ]
}
