# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../gn/perfetto.gni")
import("../../gn/ipc_library.gni")

# IPC service definitions.
ipc_library("tracing_service") {
  deps = [
    ":lite",
  ]
  proto_in_dir = perfetto_root_path
  sources = [
    "consumer_port.proto",
    "producer_port.proto",
  ]
}

proto_library("lite") {
  proto_in_dir = perfetto_root_path
  proto_out_dir = "protos_lite"
  sources = [
    "data_source_config.proto",
    "data_source_descriptor.proto",
    "trace_config.proto",
  ]
}
